--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "expo-file-system": "^18.1.11",
     "expo-image-picker": "^16.1.4"
   }
 }
